@@ -1,2 +1,3 @@
 DIST ovirt-engine-3.3.4.tar.gz 6214467 SHA256 59c5c666ee96b2af01f2a0cc5f3aaab42ca73e0134bf55f62cfcccb4d30f19b5 SHA512 8d1e4c093f55a62b6ae5af492c3c19bee514de927a578618f596a13b687845474abd966aa878f9bf650a0ad1b6370c285537ae3cf5a6d79a80558d8ad86df414 WHIRLPOOL 416fe6e50b6fb2fdc2a7d0a51d9918f8319b97d12375d73ca4ba69fabd0b73c802806e77b3c0274b4a3a13a21e386ba0c8abce88075d2d90edc886bce196ce26
 DIST ovirt-engine-3.4.0.tar.gz 6632825 SHA256 5edc898f04df8b47b9e14455869f4b00b90f45bd14cd6b48cad9ddb635f21443 SHA512 e060933ea4da1176403b28c24f4dc7821fe6ce6090355205e068ec0d24f2a4265e5898de43f6beb870338993e8872ac1c470e2fde9e5851542616f5c72369662 WHIRLPOOL c72d1702b71af9a3fc8cc599c4c69582ff292b0532f57a06ebd069ebbc5942105bd26cab5f659a01d1e93d748655c77479aebf7038d61a28c74b08fd8d9cea61
+DIST ovirt-engine-3.4.1.tar.gz 6681475 SHA256 bc16344a90f99bf9d42350ed7b0d1abf52714e0531de504c0ae9bc368ad2efc9 SHA512 0f1766ce2c2857a317bc6e4c4f76ae190feca66533fbca897253aa8ea10806b90ed7ee8688e95f5d70a1ceff68981e87fc9552f035bb97a70a4155150b45fbcf WHIRLPOOL 75fd0fe35af0c80e48490b83b939b80d288dae419d4d83f40d594c31fd6fa6f1c2cc5f590a7de29e5149a86808c49efa600c8acd2729effa6e6f3790681b4f59
