@@ -1,3 +1,8 @@
+*ovirt-engine-3.4.1 (08 May 2014)
+
+  08 May 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.4.1.ebuild:
+  Version bump
+
   04 May 2014; Alon Bar-Lev <alonbl@redhat.com> metadata.xml,
   ovirt-engine-9999.ebuild:
   Add javadoc USE
